--- a/index.html
+++ b/index.html
@@ -2,18 +2,83 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Component</title>
     <link rel="stylesheet" href="style.css" />
-    <title>Web Components Example 1</title>
   </head>
   <body>
-    <!-- <blog-post
-      title="Web Components"
-      link="learn more"
-      description="Qui enim dolore veniam commodo occaecat duis cillum laborum ea laborum."
-    ></blog-post> -->
-    <blog-post title="Web Components 2"></blog-post>
-    <script src="app.js"></script>
+    <header class="wrapper">
+      <h1 id="logo">Before Semicolon</h1>
+      <nav>
+        <ul>
+          <li>Blog</li>
+          <li>Videos</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+
+    <section role="banner" id="banner">
+      <h2>Learn what it takes to become a Web Developer</h2>
+      <button>Start Now</button>
+    </section>
+
+    <main class="wrapper">
+      <blog-post-list id="blog-posts"> </blog-post-list>
+    </main>
+
+    <footer class="wrapper">
+      <div class="menu-list">
+        <h3>Learn</h3>
+        <ul role="menu">
+          <li>Videos</li>
+          <li>Articles</li>
+          <li>Tutoring</li>
+          <li>1 on 1</li>
+        </ul>
+      </div>
+      <div class="menu-list">
+        <h3>Products/Service</h3>
+        <ul role="menu">
+          <li>HTML Plus</li>
+          <li>BFS Framework</li>
+          <li>BFS CMS</li>
+          <li>Pricing</li>
+        </ul>
+      </div>
+      <div class="menu-list">
+        <h3>Company</h3>
+        <ul role="menu">
+          <li>About</li>
+          <li>Blog</li>
+          <li>Careers</li>
+          <li>Store</li>
+        </ul>
+      </div>
+      <div class="menu-list">
+        <h3>Social</h3>
+        <ul>
+          <li>Youtube</li>
+          <li>Twitter</li>
+          <li>Reddit</li>
+          <li>Instagram</li>
+        </ul>
+      </div>
+      <p class="copyright">
+        copyright &copy; Before Semicolon 2021. All rights reserved.
+      </p>
+    </footer>
+
+    <script src="app.js" type="module"></script>
+
+    <template id="blog-post-template">
+      <div class="blog-post">
+        <div class="thumbnail">
+          <img src="" alt="" />
+        </div>
+        <h2>TITLE</h2>
+        <p>DESCRIPTION</p>
+        <a href="">Learn More</a>
+      </div>
+    </template>
   </body>
 </html>
